syntax = "proto3";

package msg_pb;

message MetaInfo {
    int32 type = 1; // 消息类型
    string info = 2; // 额外信息（可选）
}

message PushMessage {
    string conversation_id = 1;        // 会话ID（可选）
    string section_id = 2;            // 部分ID（可选）
    string message_id = 3;            // 消息ID（可选）
    string local_message_id = 4;      // 本地消息ID（可选）
    int32 index = 5;                   // 索引（可选）
    string sec_sender = 6;             // 第二发送者（可选）
    string reply_id = 7;               // 回复ID（可选）
    int32 status = 8;                  // 状态（可选）
    int32 create_time = 9;             // 创建时间（可选）
    int32 message_type = 10;           // 消息类型（可选）
    int32 content_type = 11;           // 内容类型（可选）
    string content = 12;                // 内容（可选）
    string tts_content = 13;           // TTS内容（可选）
    map<string, string> ext = 14;      // 扩展信息（可选）
    int32 next_connection_type = 15;   // 下一个连接类型（可选）
    int32 chunk_seq = 16;              // 分块序列（可选）
    bool is_delta = 17;                // 是否为增量（可选）
    repeated MetaInfo meta_infos = 18; // 元信息列表
    string local_conversation_id = 19; // 本地会话ID（可选）
    string bot_id = 20;                // 机器人ID（可选）
    map<string, string> applet_payload = 21; // 小程序有效载荷（可选）
    int32 model_type = 22;             // 模型类型（可选）
    int32 update_time = 23;            // 更新时间（可选）
    int32 thread_id = 24;              // 线程ID（可选）
}

message PushCmd {
    int32 cmd_type = 1;                // 命令类型（可选）
    int32 index = 2;                   // 索引（可选）
    string conversation_id = 3;        // 会话ID（可选）
    string message_id = 4;             // 消息ID（可选）
    map<string, string> ext = 5;       // 扩展信息（可选）
    int32 up_cmd_type = 6;             // 上级命令类型（可选）
    string local_message_id = 7;       // 本地消息ID（可选）
}

message GeoInfo {
    string longitude = 1;              // 经度（可选）
    string latitude = 2;               // 纬度（可选）
    string country_name = 3;           // 国家名称（可选）
    string province_name = 4;          // 省份名称（可选）
    string city_name = 5;              // 城市名称（可选）
    string district_name = 6;           // 区域名称（可选）
    string town_name = 7;              // 镇名称（可选）
    string country_code = 8;           // 国家代码（可选）
}

message AppAction {
    int64 message_id = 1;             // 消息 ID（可选）
    string local_message_id = 2;      // 本地消息 ID（可选）
    int64 reply_id = 3;                // 回复 ID（可选）
    int64 question_id = 4;             // 问题 ID（可选）
    int64 create_time = 5;             // 创建时间（可选）
    string content = 6;                // 内容（可选）
    map<string, string> ext = 7;       // 扩展信息（可选）
    int32 message_type = 8;            // 消息类型（可选）
}

message PushEvent {
    enum EventType {
        UNKNOW = 0;
        AppAction = 3;
        PushCmd = 2;
        PushMessage = 1;
    }
    EventType event_type = 1;         // 事件类型
    PushMessage message = 2;               // 消息（可选）
    PushCmd cmd = 3;                   // 命令（可选）
    GeoInfo geo = 4;                   // 地理信息（可选）
    AppAction app_action = 5;          // 应用行为（可选）
    int32 version = 6;                 // 版本（可选）
    repeated PushMessage message_list = 7; // 消息列表
}